[package]
name = "port-scanner"
version = "0.1.0"
edition = "2021"
description = "Detect open ports on a target host"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "cargo"] }
color-eyre = { version = "0.6.2", default-features = false }
colored = "2.0.0"
eyre = "0.6.8"
