[package]
name = "port-scanner"
version = "0.1.0"
edition = "2021"
description = "Detect open ports on a target host"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive", "cargo"] }
colored = "2.0.0"
dns-lookup = "1.0.8"
libc = "0.2.141"
mio = { version = "0.8.6", features = ["os-ext", "os-poll"] }
num_enum = "0.6.0"
pnet = "0.33.0"
rand = "0.8.5"
socket = "0.0.7"

[dev-dependencies]
assert_fs = "1.0.10"
